بعد اضافة تقويم وتواريخ على الرئيسية

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -20,5 +20,5 @@
     }
   </style>
 
-  <div class="inner">مدرسة الملك عبدالعزيز الابتدائية بأبها</div>
+  <div class="inner">جميع الحقوق محفوظة للمدرسة</div>
 </footer>
